@@ -1,3 +1,10 @@
+2014-07-12 Yavor Doganov  <yavor@gnu.org>
+
+	* Tests/GNUmakefile:
+	* Tests/base/Functions/NSGeometry1.m:
+	* Tests/base/NSRunLoop/performers.m:
+	Tweaks for running in sandbox (bug #42740)
+
 2014-07-07  Yunqiang Su  <wzssyqa@gmail.com>  (tiny change)
 
 	* config/config.trampoline.c:
@@ -11,7 +18,7 @@
 	to the empty string to avoid linking the tools against
 	external libraries.
 	
-2014-07-13 Yavor Doganov  <yavor@gnu.org>
+2014-06-30 Yavor Doganov  <yavor@gnu.org>
 
 	* base.make.in: make base dependencies explicit only when statically
 	linnking (bug #42423)
